k3s/apps/catcdc/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: catcdc
spec:
  type: ClusterIP
  selector:
    app: catcdc
    component: catcdc
  ports:
    - name: http
      port: 8000
      targetPort: 8000
